--- a/cv.tex
+++ b/cv.tex
@@ -116,12 +116,12 @@
 % \end{tabularx}
 
 \begin{tabularx}{\linewidth}{@{} C @{}}
-\Huge{Your Name} \\[7.5pt]
-\href{https://github.com/username}{\raisebox{-0.05\height}\faGithub\ username} \ $|$ \ 
-\href{https://linkedin.com/in/username}{\raisebox{-0.05\height}\faLinkedin\ username} \ $|$ \ 
-\href{https://mysite.com}{\raisebox{-0.05\height}\faGlobe \ mysite.com} \ $|$ \ 
-\href{mailto:email@mysite.com}{\raisebox{-0.05\height}\faEnvelope \ email@mysite.com} \ $|$ \ 
-\href{tel:+000000000000}{\raisebox{-0.05\height}\faMobile \ +00.00.000.000} \\
+\Huge{Amin Alian} \\[7.5pt]
+\href{https://github.com/aminager}{\raisebox{-0.05\height}\faGithub\ Aminager} \ $|$ \ 
+\href{https://linkedin.com/in/aminalian}{\raisebox{-0.05\height}\faLinkedin\ Amin Alian} \ $|$ \ 
+% \href{https://mysite.com}{\raisebox{-0.05\height}\faGlobe \ mysite.com} \ $|$ \ 
+\href{mailto:alianamin00@gmail.com}{\raisebox{-0.05\height}\faEnvelope \ alianamin00@gmail.com} \ $|$ \ 
+\href{tel:+46761927594}{\raisebox{-0.05\height}\faMobile \ +46 76 192 75 94} \\
 \end{tabularx}
 
 %----------------------------------------------------------------------------------------
@@ -130,66 +130,75 @@
 
 %Interests/ Keywords/ Summary
 \section{Summary}
-This CV is automatically generated and deployed using the \href{https://github.com/jitinnair1/autoCV}{autoCV} template along with GitHub Actions such that a new version of the CV is compiled, published and ready for use when the cv.tex file is updated. For details, \href{https://github.com/jitinnair1/autoCV}{click here}.
+Hey! My name is Amin and I’m currently in my seventh semester at LTH,
+studying Computer Science Engineering, specialising in Software. I’m
+fluent in Swedish, English and Persian. Being around people gives me
+energy, but my foremost quality is my calm. I relax by playing sports and
+am looking forward to new and ambitious tasks.
 
 %Experience
 \section{Work Experience}
 
 \begin{tabularx}{\linewidth}{ @{}l r@{} }
-\textbf{Designation} & \hfill Jan 2021 - present \\[3.75pt]
-\multicolumn{2}{@{}X@{}}{long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width}  \\
+\textbf{Tetra Pak, Student Talent Programme} & \hfill Jun 2022 - present \\[3.75pt]
+\multicolumn{2}{@{}X@{}}{I am a technical expert at Tetra Pak on the Microsoft Ecosystem, such as PowerApps, Power BI and Power Automate. I have created my own reports in Power BI which are used in the engineers daily work. In PowerApps I also developed apps by configuring a back-end and creating a front-end to reduce the time loss in their daily work.}  \\
 \end{tabularx}
 
 \begin{tabularx}{\linewidth}{ @{}l r@{} }
-\textbf{Designation} & \hfill Mar 2019 - Jan 2021 \\[3.75pt]
+\textbf{DHL Express, Courier} & \hfill Jun 2021 - Aug 2021 \\[3.75pt]
 \multicolumn{2}{@{}X@{}}{
-\begin{minipage}[t]{\linewidth}
-    \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
-        \item[--] long long line of blah blah that will wrap when the table fills the column width
-        \item[--] again, long long line of blah blah that will wrap when the table fills the column width but this time even more long long line of blah blah. again, long long line of blah blah that will wrap when the table fills the column width but this time even more long long line of blah blah
-    \end{itemize}
-    \end{minipage}
+    As a courier the daily tasks were very independent and individual. This meant that I had to use critical thinking and challenge myself to solve difficulties and problems that arose everyday. My biggest takeaway from the position was how much of a difference it makes to allow myself to ask questions. By collaborating and sharing knowledge we achieved more.
 }
 \end{tabularx}
 
 %Projects
-\section{Projects}
+%\section{Projects}
 
-\begin{tabularx}{\linewidth}{ @{}l r@{} }
-\textbf{Some Project} & \hfill \href{https://some-link.com}{Link to Demo} \\[3.75pt]
-\multicolumn{2}{@{}X@{}}{long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width}  \\
-\end{tabularx}
+%\begin{tabularx}{\linewidth}{ @{}l r@{} }
+%\textbf{Some Project} & \hfill \href{https://some-link.com}{Link to Demo} \\[3.75pt]
+%\multicolumn{2}{@{}X@{}}{long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width}  \\
+%\end{tabularx}
 
 %----------------------------------------------------------------------------------------
 %	EDUCATION
 %----------------------------------------------------------------------------------------
 \section{Education}
 \begin{tabularx}{\linewidth}{@{}l X@{}}	
-2030 - present & PhD (Subject) at \textbf{University} \hfill \normalsize (GPA: 4.0/4.0) \\
+2019 - present (2024) & MSE Comp. Sci. at \textbf{Lund University, LTH} \hfill \normalsize (GPA: 3.3/4.0) \\
 
-2023 - 2027 & Bachelor's Degree at \textbf{College} \hfill (GPA: 4.0/4.0) \\ 
-
-2022 & Class 12th Some Board \hfill  (Grades) \\
-
-2021 & Class 10th Some Board \hfill  (Grades) \\
+2016 - 2019 & Upper Secondary School at \textbf{Kungsholmens Gymnasium} \hfill (GPA: 20.8/22.5) \\ 
 \end{tabularx}
 
 %----------------------------------------------------------------------------------------
 %	PUBLICATIONS
 %----------------------------------------------------------------------------------------
-\section{Publications}
-\begin{refsection}[citations.bib]
-\nocite{*}
-\printbibliography[heading=none]
-\end{refsection}
+\section{Voluntary Work}
+\begin{tabularx}{\linewidth}{ @{}l r@{} }
+\textbf{Vice Chairman of the Activity Committee, Comp
+Sci Guild LTH} & \hfill Jan 2020 - Dec 2020 \\[3.75pt]
+\multicolumn{2}{@{}X@{}}{
+    As the Vice Chairman I arranged and executed events together with other
+    guilds at LTH. I was ultimately in charge of organisation of events and
+    integration in the guild.
+}
+\end{tabularx}
+
+\begin{tabularx}{\linewidth}{ @{}l r@{} }
+\textbf{Web master, Student Union at Kungsholmens
+Gymnasium} & \hfill Mar 2018 - Mar 2019 \\[3.75pt]
+\multicolumn{2}{@{}X@{}}{
+    During the semesters of 2018/19, I was the web master of the Student
+    Union. I was in charge of making sure the web site was maintained,
+    developed and secure
+}
+\end{tabularx}
 
 %----------------------------------------------------------------------------------------
 %	SKILLS
 %----------------------------------------------------------------------------------------
 \section{Skills}
 \begin{tabularx}{\linewidth}{@{}l X@{}}
-Some Skills &  \normalsize{This, That, Some of this and that etc.}\\
-Some More Skills  &  \normalsize{Also some more of this, Some more that, And some of this and that etc.}\\  
+Programming &  \normalsize{I am very comfortable with programming and approaching new tasks. I have university experience in working with Scrum, Agile and team development. I am most comfortable in Python and Java, but I am eager to learn more. I have worked in Scala, React as well as PowerQuery and DAX as well.}\\
 \end{tabularx}
 
 \vfill
