--- a/cv.tex
+++ b/cv.tex
@@ -114,9 +114,13 @@
 % \raisebox{-0.05\height}\faGithub\ username \ | \
 % \raisebox{-0.00\height}\faLinkedin\ username \ | \ \raisebox{-0.05\height}\faGlobe \ mysite.com  & \hfill \emoji{calling} number
 % \end{tabularx}
-
+\begin{figure}[h]
+	\includegraphics[width=2.8cm]{bild_cv.jpg}
+	\centering
+\end{figure}
 \begin{tabularx}{\linewidth}{@{} C @{}}
 \Huge{Amin Alian} \\[7.5pt]
+
 \href{https://github.com/aminager}{\raisebox{-0.05\height}\faGithub\ Aminager} \ $|$ \ 
 \href{https://linkedin.com/in/aminalian}{\raisebox{-0.05\height}\faLinkedin\ Amin Alian} \ $|$ \ 
 % \href{https://mysite.com}{\raisebox{-0.05\height}\faGlobe \ mysite.com} \ $|$ \ 
@@ -187,9 +191,7 @@ Sci Guild LTH} & \hfill Jan 2020 - Dec 2020 \\[3.75pt]
 \textbf{Web master, Student Union at Kungsholmens
 Gymnasium} & \hfill Mar 2018 - Mar 2019 \\[3.75pt]
 \multicolumn{2}{@{}X@{}}{
-    During the semesters of 2018/19, I was the web master of the Student
-    Union. I was in charge of making sure the web site was maintained,
-    developed and secure
+    I was in charge of making sure the website was maintained, developed and secure
 }
 \end{tabularx}
 
