--- a/cv.tex
+++ b/cv.tex
@@ -115,7 +115,7 @@
 % \raisebox{-0.00\height}\faLinkedin\ username \ | \ \raisebox{-0.05\height}\faGlobe \ mysite.com  & \hfill \emoji{calling} number
 % \end{tabularx}
 \begin{figure}[h]
-	\includegraphics[width=2.8cm]{bild_cv.jpg}
+	\includegraphics[width=2.8cm]{figures/bild_cv.jpg}
 	\centering
 \end{figure}
 \begin{tabularx}{\linewidth}{@{} C @{}}
